@@ -17,6 +17,11 @@
 #include "solarus/lowlevel/QuestFiles.h"
 #include "solarus/lowlevel/Debug.h"
 #include "solarus/CurrentQuest.h"
+#include "solarus/DialogResources.h"
+#include "solarus/QuestProperties.h"
+#include "solarus/QuestResources.h"
+#include "solarus/StringResources.h"
+#include <lua.hpp>
 
 namespace Solarus {
 
@@ -31,6 +36,37 @@ void initialize() {
   // Read the quest resource list file.
   QuestResources& resources = get_resources();
   resources.import_from_quest_file("project_db.dat");
+
+  // Read the quest properties file.
+  QuestProperties& properties = get_properties();
+
+  const std::string file_name("quest.dat");
+  lua_State* l = luaL_newstate();
+  const std::string& buffer = QuestFiles::data_file_read(file_name);
+  int load_result = luaL_loadbuffer(l, buffer.data(), buffer.size(), file_name.c_str());
+
+  if (load_result != 0) {
+    // Syntax error in quest.dat.
+    // Loading quest.dat failed.
+    // There may be a syntax error, or this is a quest for Solarus 0.9.
+    // There was no version number at that time.
+
+    const std::string error_message = lua_tostring(l, -1);
+    lua_close(l);
+
+    if (std::string(buffer).find("[info]")) {
+      // Quest format of Solarus 0.9.
+      Debug::die(std::string("This quest is made for Solarus 0.9 but you are running Solarus ")
+          + SOLARUS_VERSION);
+    }
+    else {
+      Debug::die(std::string("Failed to load quest.dat: ") + error_message);
+    }
+  }
+
+  // Normal case.
+  properties.import_from_lua(l);
+  lua_close(l);
 }
 
 /**
@@ -41,6 +77,18 @@ void quit() {
   get_resources().clear();
   get_strings().clear();
   get_dialogs().clear();
+}
+
+/**
+ * \brief Returns the properties of current quest.
+ * \return The current quest properties.
+ */
+QuestProperties& get_properties() {
+
+  // The resources object must be in a function to avoid static initialization
+  // order problems.
+  static QuestProperties properties;
+  return properties;
 }
 
 /**
