@@ -30,6 +30,8 @@ Changes that introduce incompatibilities:
 
 Changes that do not introduce incompatibilities:
 
+* Add a function sol.main.get_solarus_version() (#767).
+* Add a function sol.main.get_quest_format().
 * Add a function sol.main.get_type() (#744).
 * Add a method map:get_num_layers() (#445).
 * Add a method map:get_entities_in_rectangle() (#142).
